log/build_2024-08-28_08-48-02/ur3/stderr.log
  File "/home/saba/workspaces/ramen_robot_ws/install/ur3/lib/python3.10/site-packages/ur3/ur3_negi_node.py", line 181
    elif self.posN == 3\4 and self.negi_depth < 0.500:
                        ^
SyntaxError: unexpected character after line continuation character

